# satgregate

./: Cargo.toml  README.md
src/: lib.rs  main.rs
tests/resources/: HG001_GRCh38_1_22_v4.2.1_benchmark.snippet.vcf  sample_family.csv
